--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
 	<header id="header">
 		<div class="inner">
 			<img class="image avatar" src="images/avatar.jpg" alt="" />
-			<h1><strong>Hi, I am Ryan!</strong> <br />an Architectural Engineer with expertise in sketchup and
-				rendering.<br />
+			<h1><strong>Hi, I am Ryan!</strong> <br />an Architectural Engineer with expertise in Sketchup and
+				Rendering.<br />
 				<br />
 				<!-- crafted by <a href="http://html5up.net">HTML5 UP</a>.</h1> -->
 		</div>
@@ -58,41 +58,41 @@
 			<div class="row">
 				<article class="col-6 col-12-xsmall work-item">
 					<a href="images/fulls/full-1.jpeg" class="image fit thumb"><img src="images/thumbs/ryan-1.jpeg"
-							alt="" /></a>
+							alt="Depok Flea Market" /></a>
 					<h3>Depok Flea Market</h3>
 					<p>Pasar yang dirancang menggunakan material bekas sekitar yang membuat biaya cost material menjadi
 						murah.</p>
 				</article>
 				<article class="col-6 col-12-xsmall work-item">
 					<a href="images/fulls/full-2.jpeg" class="image fit thumb"><img src="images/thumbs/ryan-2.jpeg"
-							alt="" /></a>
+							alt="Qubika Recycle Container" /></a>
 					<h3>Qubika Recycle Container</h3>
 					<p>Penggunaan container bekas yang dibuang lalu didaur ulang kembali menjadi titik perhatian market
 						sekitar.</p>
 				</article>
 				<article class="col-6 col-12-xsmall work-item">
 					<a href="images/fulls/full-3.jpeg" class="image fit thumb"><img src="images/thumbs/ryan-3.jpeg"
-							alt="" /></a>
+							alt="Lingkar Tanjak" /></a>
 					<h3>Lingkar Tanjak</h3>
 					<p>Taman yang terinspirasi dari bentuk topi tanjak yang berasal dari daerah Palembang, menggunakan
 						sistem cat anti bomber yang menjadi tempat kreativitas muncul.</p>
 				</article>
 				<article class="col-6 col-12-xsmall work-item">
 					<a href="images/fulls/full-4.jpeg" class="image fit thumb"><img src="images/thumbs/ryan-4.jpeg"
-							alt="" /></a>
+							alt="Kertapati Station" /></a>
 					<h3>Kertapati Station</h3>
 					<p>Icon stasiun kota Palembang, berbentuk seperti gelombang dan bukaan besar membuat sirkulasi
 						berputar dengan baik.</p>
 				</article>
 				<article class=" col-6 col-12-xsmall work-item">
 					<a href="images/fulls/full-5.jpeg" class="image fit thumb"><img src="images/thumbs/ryan-5.jpeg"
-							alt="" /></a>
+							alt="Kertapati Station" /></a>
 					<h3>Jawa Park</h3>
 					<p>Taman dengan bentuk dan highlight yang dinamis serta ramah bagi anak di bawah umur.</p>
 				</article>
 				<article class="col-6 col-12-xsmall work-item">
 					<a href="images/fulls/full-6.jpeg" class="image fit thumb"><img src="images/thumbs/ryan-6.jpeg"
-							alt="" /></a>
+							alt="Boya House" /></a>
 					<h3>Boya House</h3>
 					<p>Rumah dengan tema industrial, menggunakan material RAW dan bukaan cahaya yang banyak.</p>
 				</article>
@@ -108,21 +108,6 @@
 			<h2>Get In Touch</h2>
 			<p>I'm always open to new opportunities and collaborations. Feel free to contact me.</p>
 			<div class="row">
-				<!-- <div class="col-8 col-12-small">
-					<form method="post" action="#">
-						<div class="row gtr-uniform gtr-50">
-							<div class="col-6 col-12-xsmall"><input type="text" name="name" id="name"
-									placeholder="Name" /></div>
-							<div class="col-6 col-12-xsmall"><input type="email" name="email" id="email"
-									placeholder="Email" /></div>
-							<div class="col-12"><textarea name="message" id="message" placeholder="Message"
-									rows="4"></textarea></div>
-						</div>
-					</form>
-					<ul class="actions">
-						<li><input type="submit" value="Send Message" /></li>
-					</ul>
-				</div> -->
 				<div class="col-4 col-12-small">
 					<ul class="labeled-icons">
 						<li>
@@ -131,7 +116,7 @@
 						</li>
 						<li>
 							<h3 class="icon solid fa-mobile-alt"><span class="label">Phone</span></h3>
-							+62-851-7427-5877
+							+62 877-8887-8383
 						</li>
 						<li>
 							<h3 class="icon solid fa-envelope"><span class="label">Email</span></h3>
@@ -153,7 +138,7 @@
 							target="_blank"><span class="label">Linkedin</span></a></li>
 					<li><a href="https://www.instagram.com/ryan.dwi.p/" class="icon brands fa-instagram"
 							target="_blank"><span class="label">Instagram</span></a></li>
-					<li><a href="https://api.whatsapp.com/send?phone=6285174275877" class="icon brands fa-whatsapp"
+					<li><a href="https://api.whatsapp.com/send?phone=6287788878383" class="icon brands fa-whatsapp"
 							target="_blank"><span class="label">Whatsapp</span></a></li>
 					<li><a href="https://mail.google.com/mail/u/0/#inbox?compose=CllgCKCBkQrdZMvTsnhFRnqHzdZdhNjxkBtjfqKjphxMwFdCrpBwtPFlzQRnwsVczNzfwHZbqdq"
 							class="icon solid fa-envelope" target="_blank"><span class="label">Email</span></a></li>
