--- a/index.html
+++ b/index.html
@@ -120,8 +120,7 @@
 						</li>
 						<li>
 							<h3 class="icon solid fa-envelope"><span class="label">Email</span></h3>
-							<a href="https://mail.google.com/mail/u/0/#inbox?compose=CllgCKCBkQrdZMvTsnhFRnqHzdZdhNjxkBtjfqKjphxMwFdCrpBwtPFlzQRnwsVczNzfwHZbqdq"
-								target="_blank">ryandwip31@gmail.com</a>
+							<a href="mailto:ryandwip31@gmail" target="_blank">ryandwip31@gmail.com</a>
 						</li>
 					</ul>
 				</div>
@@ -140,8 +139,8 @@
 							target="_blank"><span class="label">Instagram</span></a></li>
 					<li><a href="https://api.whatsapp.com/send?phone=6287788878383" class="icon brands fa-whatsapp"
 							target="_blank"><span class="label">Whatsapp</span></a></li>
-					<li><a href="https://mail.google.com/mail/u/0/#inbox?compose=CllgCKCBkQrdZMvTsnhFRnqHzdZdhNjxkBtjfqKjphxMwFdCrpBwtPFlzQRnwsVczNzfwHZbqdq"
-							class="icon solid fa-envelope" target="_blank"><span class="label">Email</span></a></li>
+					<li><a href="mailto:ryandwip31@gmail" class="icon solid fa-envelope" target="_blank"><span
+								class="label">Email</span></a></li>
 				</ul>
 				<ul class="copyright">
 					<li>&copy; Mirale Studio</li>
